--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,8 @@
+cached-property==1.5.2
+classproperties==0.2.0
 clear-screen==0.1.14
+datafiles==2.0
+minilog==2.1
+parse==1.19.0
+ruamel.yaml==0.17.21
+tomlkit==0.10.2
